--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,10 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 logging.level.ru.practicum.shareit=trace
+# ????? ????????
+logging.level.org.hibernate.SQL=DEBUG
+# ????? ????????, ??????? ????????????? ? ????????? ????????
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
 
 #---
 # TODO Append connection to DB
