--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,17 +3,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-logging.level.org.springframework.orm.jpa=INFO
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-logging.level.ru.practicum.shareit=trace
-# ????? ????????
-logging.level.org.hibernate.SQL=DEBUG
-# ????? ????????, ??????? ????????????? ? ????????? ????????
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
-
-#---
+#logging.level.org.springframework.orm.jpa=INFO
+#logging.level.org.springframework.transaction=INFO
+#logging.level.org.springframework.transaction.interceptor=TRACE
+#logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+#logging.level.ru.practicum.shareit=trace
+## ????? ????????
+#logging.level.org.hibernate.SQL=DEBUG
+## ????? ????????, ??????? ????????????? ? ????????? ????????
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder = TRACE
+#
+##---
 # TODO Append connection to DB
 #---
 spring.config.activate.on-profile=ci,test
