--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,3 @@
 FROM amazoncorretto:11
 COPY target/*.jar server.jar
-ENTRYPOINT ["java","-jar","/server.jar"]
+ENTRYPOINT ["java","-jar","-Dserver.port=9090","/server.jar"]
